@@ -106,6 +106,7 @@ Changes in version 0.9 (25.6.2003)
 * new sample application "Petclinic"
 * new sample application "PagedList"
 * application skeletons as configuration showcases
+* MutableSortDefinition accepts now NO_CHANGE for setProperty and does nothing in this case
 * (many new convenience classes and methods)
 * (too many minor improvements to list)
 * (lots of minor bugfixes)
